syntax = "proto3";

package member;

// protoc-gen-go 版本大于1.4.0, proto文件需要加上go_package,否则无法生成
option go_package = "./member";

message MemberReq {
  int64 memberId = 3;
}


message MemberInfo {
  int64 id  = 1;
  string aliNo  = 2;
  string qrCodeUrl  = 3;
  int32 appealSuccessTimes  = 4;
  int32 appealTimes  = 5;
  int64 applicationTime  = 6;
  string avatar  = 7;
  string bank  = 8;
  string branch  = 9;
  string cardNo  = 10;
  int64 certifiedBusinessApplyTime  = 11;
  int64 certifiedBusinessCheckTime  = 12;
  int32 certifiedBusinessStatus  = 13;
  int32 channelId  = 14;
  string email  = 15;
  int32 firstLevel  = 16;
  int64 googleDate  = 17;
  string googleKey  = 18;
  int32 googleState  = 19;
  string idNumber  = 20;
  int64 inviterId  = 21;
  int32 isChannel  = 22;
  string jyPassword  = 23;
  int64 lastLoginTime  = 24;
  string city  = 25;
  string country  = 26;
  string district  = 27;
  string province  = 28;
  int32 loginCount  = 29;
  int32 loginLock  = 30;
  string margin  = 31;
  int32 memberLevel  = 32;
  string mobilePhone  = 33;
  string password  = 34;
  string promotionCode  = 35;
  int32 publishAdvertise  = 36;
  string realName  = 37;
  int32 realNameStatus  = 38;
  int64 registrationTime  = 39;
  string salt  = 40;
  int32 secondLevel  = 41;
  int32 signInAbility  = 42;
  int32 status  = 43;
  int32 thirdLevel  = 44;
  string token  = 45;
  int64 tokenExpireTime  = 46;
  int32 transactionStatus  = 47;
  int64 transactionTime  = 48;
  int32 transactions  = 49;
  string username  = 50;
  string qrWeCodeUrl  = 51;
  string wechat  = 52;
  string local  = 53;
  int64 integration  = 54;
  int64 memberGradeId  = 55;
  int32 kycStatus  = 56;
  int64 generalizeTotal  = 57;
  int64 inviterParentId  = 58;
  string superPartner  = 59;
  double kickFee  = 60;
  double power  = 61;
  int32 teamLevel  = 62;
  double teamPower  = 63;
  int64 memberLevelId  = 64;
}

service Member {
  rpc FindMemberById(MemberReq) returns(MemberInfo);
}